force-app/main/default/objects/Issue__c/Issue__c.object-meta.xml
<CustomObject>
    <description>Issues are situations reported by Support for Engineering to handle. They are often the result of Support Cases opened by customers, that have been escalated for Engineering to solve or explain.</description>
    <label>Issue</label>
    <nameField>
        <displayFormat>IS-{00000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>