force-app/main/default/objects/Issue__c/fields/JIRA_Resolution__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Resolution__c</fullName>
    <label>JIRA Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Won&apos;t Do</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Cannot Reproduce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>