force-app/main/default/objects/Issue__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issues1</relationshipName>
    <type>Lookup</type>
</CustomField>