force-app/main/default/objects/Issue__c/fields/Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Support_Notes__c</fullName>
    <description>Description of the issue and steps to replicate it.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>