force-app/main/default/objects/Issue__c/validationRules/Select_an_Issue_Approver.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_an_Issue_Approver</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Issue_Approvers__r.Username == null, Send_to_PM__c == True)</errorConditionFormula>
    <errorMessage>&quot;Please select an Issue Approver before proceeding. The approvers can be any of Eric Shreve, Joe Lawrence or Alex Govan. This Issue cannot be sent to a PM without the Issue Approver&apos;s approval&quot;</errorMessage>
</ValidationRule>