force-app/main/default/objects/Issue__c/listViews/Dev_Open_Issues.listView-meta.xml
<ListView>
    <fullName>Dev_Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>Issue_Subject__c</columns>
    <columns>Dev_Assigned__c</columns>
    <columns>AtRisk__c</columns>
    <columns>Support_Priority__c</columns>
    <columns>Escalated__c</columns>
    <columns>Issue_Age__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>notEqual</operation>
        <value>RESOLVED,CLOSED</value>
    </filters>
    <label>1 Open Issues</label>
</ListView>