force-app/main/default/objects/Issue__c/listViews/Escalated_Issues.listView-meta.xml
<ListView>
    <fullName>Escalated_Issues</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Issue_Subject__c</columns>
    <columns>Escalated__c</columns>
    <columns>Escalation_Reason__c</columns>
    <columns>Dev_Assigned__c</columns>
    <columns>Dev_Update__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>dev-open,dev-assigned</value>
    </filters>
    <filters>
        <field>Escalated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Escalated Issues</label>
</ListView>