force-app/main/default/objects/Issue__c/listViews/MoveToPM_Issues.listView-meta.xml
<ListView>
    <fullName>MoveToPM_Issues</fullName>
    <columns>NAME</columns>
    <columns>Issue_Subject__c</columns>
    <columns>Dev_Update__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>Product_Management</value>
    </filters>
    <label>3 MoveToPM Issues</label>
</ListView>