force-app/main/default/objects/Issue__c/listViews/Resolved_Issues.listView-meta.xml
<ListView>
    <fullName>Resolved_Issues</fullName>
    <columns>NAME</columns>
    <columns>Issue_Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Issue_Status__c</columns>
    <columns>Issue_Fixed_at__c</columns>
    <columns>Dev_Assigned__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Status__c</field>
        <operation>equals</operation>
        <value>dev-fixed,dev-rejected,closed</value>
    </filters>
    <label>4 Resolved Issues</label>
</ListView>